--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OhMyFood</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fontawesome.com/">
 </head>
 <body>  
     <header>
        <h1> OhMyFood </h1>
     </header>
+    <main>
+        <div class="init">
+            <i class="fas fa-map-marker-alt"></i>
+            <h2>Paris,Belleville</h2>
+            
+        </div>
+    </main>
 </body>
 </html>
