--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
         <div class="init">
             <i class="fas fa-map-marker-alt"></i>
             <h2>Paris,Belleville</h2>
-            
         </div>
+            <section class="explorer">
+                <h2>Reservez le menu qui <br> vous convient</h2>
+                <p>Decouvrez des restaurants d exceptions selectionnes par nos sors</p>
+                <button>explorer nos restaurants</button>
+
+            </section>
+        
     </main>
 </body>
 </html>
