--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>OhMyFood</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fontawesome.com/">
+    <script src="https://kit.fontawesome.com/809b9516f1.js" crossorigin="anonymous"></script>
+
 </head>
 <body>  
     <header>
@@ -22,8 +23,10 @@
                 <h2>Reservez le menu qui <br> vous convient</h2>
                 <p>Decouvrez des restaurants d exceptions selectionnes par nos sors</p>
                 <button>explorer nos restaurants</button>
+<div class="gradient">
 
-            </section>
+</div>
+</section>
         
     </main>
 </body>
