ajout fichier use

--- a/index.html
+++ b/index.html
@@ -24,10 +24,17 @@
                 <p>Decouvrez des restaurants d exceptions selectionnes par nos sors</p>
                 <button>explorer nos restaurants</button>
 <div class="gradient">
-
 </div>
 </section>
-        
+    <section class="tutto">
+        <h2>Fonctionnement</h2>
+        <ol>
+            <li>Choississez un restaurant</li>
+            <li>Composez votre menu</li>
+            <li>Degustez au restaurant</li>
+        </ol>
+    </section>
+
     </main>
 </body>
 </html>
