--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <section class="tutto">
         <h2>Fonctionnement</h2>
         <ol>
-            <li>Choississez un restaurant</li>
-            <li>Composez votre menu</li>
-            <li>Degustez au restaurant</li>
+            <li><i class="fas fa-mobile-alt"></i>Choississez un restaurant</li>
+            <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
+            <li><i class="fas fa-store"></i>Degustez au restaurant</li>
         </ol>
     </section>
 
