--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,31 +11,61 @@
     <script src="https://kit.fontawesome.com/809b9516f1.js" crossorigin="anonymous"></script>
 
 </head>
-<body>  
+
+<body>
     <header>
-       <h1> OhMyFood </h1>
+        <h1> OhMyFood </h1>
     </header>
     <main>
         <div class="init">
             <i class="fas fa-map-marker-alt"></i>
             <h2>Paris,Belleville</h2>
         </div>
-            <section class="explorer">
-                <h2>Reservez le menu qui <br> vous convient</h2>
-                <p>Decouvrez des restaurants d exceptions selectionnes par nos sors</p>
-                <button>explorer nos restaurants</button>
-<div class="gradient">
-</div>
-</section>
-    <section class="tutto">
-        <h2>Fonctionnement</h2>
-        <ol>
-            <li><i class="fas fa-mobile-alt"></i>Choississez un restaurant</li>
-            <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
-            <li><i class="fas fa-store"></i>Degustez au restaurant</li>
-        </ol>
-    </section>
-
+        <section class="explorer">
+            <h2>Reservez le menu qui <br> vous convient</h2>
+            <p>Decouvrez des restaurants d exceptions selectionnes par nos sors</p>
+            <button>explorer nos restaurants</button>
+            <div class="gradient">
+            </div>
+        </section>
+        <section class="tutto">
+            <h2>Fonctionnement</h2>
+            <ol>
+                <li><i class="fas fa-mobile-alt"></i>Choississez un restaurant</li>
+                <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
+                <li><i class="fas fa-store"></i>Degustez au restaurant</li>
+            </ol>
+        </section>
+        <section class="menus">
+            <h2>restaurants</h2>
+            <div class="menus__cards">
+                <a href="#" class="card" >
+                    <div class="card_image"></div>
+                    <div class="card_description"></div>
+                </a>
+                <a href="#" class="card" >
+                    <div class="card_image"></div>
+                    <div class="card_description"></div>
+                </a>
+                <a href="#" class="card" >
+                    <div class="card_image"></div>
+                    <div class="card_description"></div>
+                </a>
+                <a href="#" class="card" >
+                    <div class="card_image"></div>
+                    <div class="card_description"></div>
+                </a>
+            </div>
+        </section>
     </main>
+    <footer>
+        <h2>OhMyFood</h2>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+    </footer>
+
 </body>
+
 </html>
