--- a/index.html
+++ b/index.html
@@ -37,33 +37,64 @@
             </ol>
         </section>
         <section class="menus">
-            <h2>restaurants</h2>
+            <h2>Restaurants</h2>
             <div class="menus__cards">
-                <a href="#" class="card" >
-                    <div class="card_image"></div>
-                    <div class="card_description"></div>
+                <a href="#" class="card new" >
+                    <div class="card_image card_image1"></div>
+                    <div class="card_description">
+                    <h3>La palette du gout  </h3>
+                     <p>Menilmomtant </p>
+                     <i class="far fa-heart"> </i>
+                     <i class="fas fa-heart"> </i>
+                    </div>
+                </a>
+                <a href="#" class="card new" >
+                    <div class="card_image card_image2 "></div>
+                    <div class="card_description">
+                        <h3>La note enchantee </h3>
+                        <p>Charonne </p>
+                        <i class="far fa-heart"> </i>
+                        <i class="fas fa-heart"> </i>
+                    </div>
                 </a>
                 <a href="#" class="card" >
-                    <div class="card_image"></div>
-                    <div class="card_description"></div>
+                    <div class="card_image card_image3"></div>
+                    <div class="card_description">
+                        <h3>A la francaise </h3>
+                        <p>Cite Rouge </p>
+                        <i class="far fa-heart"> </i>
+                        <i class="fas fa-heart"> </i>
+                    </div>
                 </a>
                 <a href="#" class="card" >
-                    <div class="card_image"></div>
-                    <div class="card_description"></div>
-                </a>
-                <a href="#" class="card" >
-                    <div class="card_image"></div>
-                    <div class="card_description"></div>
+                    <div class="card_image card_image4"></div>
+                    <div class="card_description">
+                        <h3>Le delice des sens </h3>
+                        <p>Folie Mericourt </p>
+                        <i class="far fa-heart"> </i>
+                        <i class="fas fa-heart"> </i>
+                    </div>
                 </a>
             </div>
+           
         </section>
     </main>
     <footer>
         <h2>OhMyFood</h2>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <p>
+        <i class="fas fa-utensils"></i>
+        Proposer un restaurant
+        </p>
+        <p>
+        <i class="fas fa-hands-helping"></i>
+       Devenir un partenaire
+       </p>
+        <p>
+           Mentions legales
+        </p>
+        <p>
+        <a href="mailto:someone@yoursite.com">Contact</a>
+        </p>
     </footer>
 
 </body>
